@@ -53,6 +53,7 @@ t/script.t
 t/site.t
 t/snippets.t
 t/spelling.t
+t/status.t
 t/strict.t
 t/taint.t
 t/tmpdir.t
