@@ -3,6 +3,7 @@ Revision history for CGI-Info
 0.71
 	Added t/fixme.t
 	Use JSON module instead of JSON::Parse as the latter has dropped support for Solaris
+	Allow status to be set, this will be used later by CGI::Allow
 
 0.70	Fri  7 Jun 12:39:52 EDT 2019
 	Allow logdir() and tmpdir() to be called as a class methods
